prevent full text button text from wrapping

--- a/app/assets/stylesheets/mgetit/_fulltext.scss
+++ b/app/assets/stylesheets/mgetit/_fulltext.scss
@@ -14,6 +14,7 @@
 .fulltext-link {
   margin: 0;
   margin-right: 0.5rem;
+  white-space: nowrap;
 }
 
 .fulltext-source {
